# maui-clip

./: CMakeLists.txt  README.md  org.maui.clip.appdata.xml
cmake/: FindFFmpeg.cmake
src/: CMakeLists.txt  assets.qrc  main.cpp  main.qml  org.kde.clip.desktop
src/backends/mpv/: mpvobject.cpp  mpvobject.h  qthelper.h  tracksmodel.cpp  tracksmodel.h
src/controllers/: lockmanager.cpp  lockmanager.h
src/models/: videosmodel.cpp
src/utils/: clip.cpp  clip.h
src/views/: BrowserLayout.qml  ItemMenu.qml  ListDelegate.qml  SelectionBar.qml
src/views/collection/: CollectionView.qml  CollectionsView.qml
src/views/player/: MPVPlayer.qml  Player.qml  PlayerView.qml  Playlist.qml
src/views/settings/: SettingsDialog.qml  ShortcutsDialog.qml
src/views/tags/: TagsGrid.qml  TagsView.qml
